Use weld instead of pico container