@@ -18,9 +18,10 @@
  */
 package com.izforge.izpack.test.junit;
 
+import static java.util.logging.Level.SEVERE;
+
 import java.lang.reflect.Constructor;
 import java.util.List;
-import java.util.logging.Level;
 import java.util.logging.Logger;
 
 import javax.swing.SwingUtilities;
@@ -31,6 +32,9 @@ import org.junit.runners.model.Statement;
 
 import com.izforge.izpack.api.container.Container;
 import com.izforge.izpack.api.exception.IzPackException;
+
+import jakarta.enterprise.inject.Instance;
+import jakarta.enterprise.inject.spi.CDI;
 
 /**
  * Custom runner for getting dependencies injected in test with PicoContainer
@@ -43,7 +47,8 @@ public class PicoRunner extends PlatformRunner
     private final Class<? extends Container> containerClass;
 
     private FrameworkMethod method;
-    private Object currentTestInstance;
+    private Instance<Object> currentTestInstance;
+    private Object currentTest;
     private Container containerInstance;
 
     /**
@@ -90,6 +95,10 @@ public class PicoRunner extends PlatformRunner
                 {
                     try
                     {
+                      if (currentTest != null)
+                      {
+                          currentTestInstance.destroy(currentTest);
+                      }
                       containerInstance.dispose();
                     }
                     finally
@@ -121,39 +130,37 @@ public class PicoRunner extends PlatformRunner
     @Override
     protected Object createTest() throws Exception
     {
-        final Class<?> javaClass = getTestClass().getJavaClass();
-
         // create container outside of EDT which matches behaviour in InstallerGui
         containerInstance = createContainer(containerClass);
-        containerInstance.addComponent(javaClass);
 
         SwingUtilities.invokeAndWait(new Runnable()
         {
+            @SuppressWarnings("unchecked")
             @Override
             public void run()
             {
                 try
                 {
-                    currentTestInstance = containerInstance.getComponent(javaClass);
+                    currentTestInstance = (Instance<Object>) CDI.current().select(getTestClass().getJavaClass());
+                    currentTest = currentTestInstance.get();
                 }
                 catch (Exception e)
                 {
-                    logger.log(Level.SEVERE, e.getMessage(), e);
+                    logger.log(SEVERE, e.getMessage(), e);
                     throw new IzPackException(e);
                 }
             }
         });
 
-        return currentTestInstance;
+        return currentTest;
     }
 
     /**
      * Tries to create an instance from the given {@code containerClass}.
      * <p>
-     *     There are a total of three constructor signatures which are recognized
+     *     There are a total of two constructor signatures which are recognized
      *     by this method:
      *     <ul>
-     *         <li>Container(Class&lt;?&gt;, FrameworkMethod)</li>
      *         <li>Container(Class&lt;?&gt;)</li>
      *         <li>Container()</li>
      *     </ul>
@@ -166,30 +173,25 @@ public class PicoRunner extends PlatformRunner
     private Container createContainer(Class<? extends Container> containerClass)
             throws Exception
     {
-        final Class<?> javaClass = getTestClass().getJavaClass();
-        Constructor<? extends Container> constructor;
-        Container result;
-
+        final Class<?> javaTestClass = getTestClass().getJavaClass();
         try
         {
-            constructor = containerClass.getConstructor(javaClass.getClass(), method.getClass());
-            result = constructor.newInstance(javaClass, method);
+            Constructor<? extends Container> constructor = containerClass.getConstructor(javaTestClass.getClass(), method.getClass());
+            return constructor.newInstance(javaTestClass, method);
         }
-        catch (NoSuchMethodException exception)
+        catch (NoSuchMethodException nsme1)
         {
             try
             {
-                constructor = containerClass.getConstructor(javaClass.getClass());
-                result = constructor.newInstance(javaClass);
+                Constructor<? extends Container> constructor = containerClass.getConstructor(javaTestClass.getClass());
+                return constructor.newInstance(javaTestClass);
             }
-            catch (NoSuchMethodException nested)
+            catch (NoSuchMethodException nsme2)
             {
-                constructor = containerClass.getConstructor();
-                result = constructor.newInstance();
+              logger.severe("Test container [" + containerClass.getName() + "] has no constructor taking a test class");
+              return containerClass.getConstructor().newInstance();
             }
         }
-
-        return result;
     }
 
 }
